# Archiver

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildFlags.cmake
src/: CMakeLists.txt  archiver.cpp  bitarray.hpp  bitread.cpp  bitread.hpp  bitstream.cpp  bitstream.hpp  bitwrite.cpp  bitwrite.hpp  cli_parser.cpp  cli_parser.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  encoder_trie.cpp  encoder_trie.hpp  huffman.hpp  priority_queue.hpp  symbol.cpp  symbol.hpp
src/unit_tests/: test_bitarray.cpp  test_bitread.cpp  test_bitwrite.cpp  test_decoder.cpp  test_encoder.cpp  test_output_file.cpp  test_priority_queue.cpp
tests/: Makefile  cmake_install.cmake
